Potential fix for font on IOS

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Keep Calm';
-    src: url('/Assets/font/KeepCalm-Medium.woff2') format('woff2'),
-        url('/Assets/font/KeepCalm-Medium.woff') format('woff');
+    src: url('./Assets/font/KeepCalm-Medium.woff2') format('woff2'),
+        url('./Assets/font/KeepCalm-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
